jquery获得请求参数-避免部分XSS漏洞

--- a/html-site-demo/src/main/resources/static/html/vue-list.html
+++ b/html-site-demo/src/main/resources/static/html/vue-list.html
@@ -15,6 +15,10 @@
     <ul>
         <li v-for="item in reports">{{item.name}}</li>
     </ul>
+    <h6>VUE循环平行引用：:id="item.name"</h6>
+    <ul>
+        <li :id="item.name" v-for="item in reports">{{item.name}}</li>
+    </ul>
 </div>
 </body>
 <script>
