--- a/html-site-demo/src/main/resources/static/html/script-execute-sequence-3.html
+++ b/html-site-demo/src/main/resources/static/html/script-execute-sequence-3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>js在html中的加载执行顺序-最先加载当前用户权限</title>
     <!--最先执行脚本的是/script/perms-->
+    <!--PS:</script>起到一个缓冲的作用，必须带上-->
     <script type="text/javascript" src="/script/perms-load-tpl"></script>
     <script>
         alert(permission.data);
